--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="photoBass">
-        <img src="images/basseyn2.jpg">;
+        <img src="images/basseyn2.jpg" alt="Фотография бассейна снаружи">
     </div>
 
     <footer>
