--- a/gallery.html
+++ b/gallery.html
@@ -104,6 +104,13 @@
                 </a>
             </div>
         </div>
+        <div class="rsp">
+            <div class="gal">
+                <a target="_blank" href="images/towers.bmp">
+                    <img src="images/towers.bmp" alt="Вышки вблизи" width="600" height="400">
+                </a>
+            </div>
+        </div>
     </div>
 
 
