--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>МУП БАССЕЙН "НЕПТУН" ГОРОДСКОГО ОКРУГА ЗАТО П.ГОРНЫЙ</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div class="sidebar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/_______thumbnail.png" alt="Логотип">
+                    <img src="images/Logotip.png" alt="Логотип">
                 </a>
             </div>
             <div class="company_name">
@@ -118,7 +119,10 @@
         <div class="blocky">
             <div class="section1">
                 <div class="logo">
-                    <img src="images/_______thumbnail.png" alt="Логотип">
+                    <a href="#">
+                        <img src="images/Logotip.png" alt="Логотип">
+                    </a>
+                    <span class="desc">Нептун</span>
                 </div>
             </div>
             <div class="section2">
