--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/_______thumbnail.png" alt="Логотип">
+                    <img src="images/Logotip.png" alt="Логотип">
                 </a>
             </div>
             <div class="company_name">
@@ -46,8 +46,12 @@
         <div class="blocky">
             <div class="section1">
                 <div class="logo">
-                    <img src="images/_______thumbnail.png" alt="Логотип">
+                    <a href="#">
+                        <img src="images/Logotip.png" alt="Логотип">
+                    </a>
+                    <span class="desc">Нептун</span>
                 </div>
+                
             </div>
             <div class="section2">
                 <div class="caption-section">
